--- a/CSS_advanced/styles/15-style.css
+++ b/CSS_advanced/styles/15-style.css
@@ -8,8 +8,11 @@
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
- html {
+ *, *:before, *:after {
     box-sizing: border-box;
+}
+
+ html {
     scroll-behavior: smooth;
     font-size: 62.5%;
 }
