--- a/CSS_advanced/styles/15-style.css
+++ b/CSS_advanced/styles/15-style.css
@@ -68,6 +68,12 @@ a:active {
     color: var(--section-title-color);
 }
 
+.container {
+    width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .section-tagline {
     color: var(--color-primary);
     font-family: var(--font-family-title);
