--- a/CSS_advanced/styles/17-style.css
+++ b/CSS_advanced/styles/17-style.css
@@ -1,6 +1,4 @@
-/* Ressetting the CSS stylesheet */
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
-
+/* Added padding to sections */
 /* Document
    ========================================================================== */
 
@@ -8,11 +6,12 @@
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
+
  *, *:before, *:after {
     box-sizing: border-box;
 }
 
- html {
+html {
     scroll-behavior: smooth;
     font-size: 62.5%;
 }
@@ -57,32 +56,19 @@ a:active {
 }
 
 .section {
-    margin: var(--section-padding);
-    width: var(--section-padding);
-    border: var(--section-padding);
     padding: var(--section-padding);
 }
 
 .section-header {
     text-align: var(--section-header-align);
-    margin: var(--section-header-padding);
-    width: var(--section-header-padding);
-    border: var(--section-header-padding);
     padding: var(--section-header-padding);
 }
 
 .section-body {
-    text-align: var(--section-body-align);
-    margin: var(--section-body-padding);
-    width: var(--section-body-padding);
-    border: var(--section-body-padding);
     padding: var(--section-body-padding);
 }
 
 .section-footer {
-    margin: var(--section-footer-padding);
-    width: var(--section-footer-padding);
-    border: var(--section-footer-padding);
     padding: var(--section-footer-padding);
     text-align: var(--section-footer-align);
 }
@@ -95,17 +81,22 @@ a:active {
     color: var(--section-title-color);
 }
 
-.container {
-    width: 960px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
 .section-tagline {
     color: var(--color-primary);
     font-family: var(--font-family-title);
     text-transform: var(--section-tagline-transform);
     font-weight: var(--font-weight-bold);
+}
+
+/* Container section */
+.container {
+    width: 960px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.footer {
+    padding: var(--footer-padding);
 }
 
 :root {
@@ -146,9 +137,3 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: var(--font-weight-bold);
 }
 
-footer {
-    margin: var(--footer-padding);
-    width: var(--footer-padding);
-    border: var(--footer-padding);
-    padding: var(--footer-padding);
-}
