--- a/CSS_advanced/styles/23-style.css
+++ b/CSS_advanced/styles/23-style.css
@@ -126,12 +126,13 @@ ul.row {
 
 .col-1-3 {
     width: 33.33%;
-    float: left;
-    padding: 0.5rem;
 }
 
 .col-1-2 {
     width: 50%;
+}
+
+[class^="col-"] {
     float: left;
     padding: 0.5rem;
 }
@@ -189,4 +190,22 @@ ul.row {
 
 .footer {
     padding: var(--footer-padding);
+}
+
+[data-section-theme="dark"] {
+    --text-color: var(--color-white);
+    --section-title-color: var(--color-white);
+    background: var(--color-black);
+}
+
+.footer-address {
+    color: var(--text-color);
+}
+
+.social-link {
+    display: block;
+}
+
+.social-link > svg {
+    fill: var(--text-color);
 }
